@@ -192,7 +192,7 @@ public abstract class ValueSource {
       if (docValue < value) {
         return -1;
       } else if (docValue > value) {
-        return -1;
+        return 1;
       } else {
         return 0;
       }
